Projektstruktur erweitert: Listener-Architektur hinzugefügt
- Ordner 'Listeners' mit ausführlicher README.md angelegt
- Interface 'IOfferListener' für Angebots-Events erstellt
- Beispiel-Listener 'ConsoleOfferListener' mit vielen Kommentaren implementiert
- UI-Komponente 'SpectreConsoleUI' in den Views-Bereich verschoben
- Projektstruktur und Kommentare für Teammitglieder verbessert

--- a/haggling_ui.csproj
+++ b/haggling_ui.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\haggling\haggling_interfaces\haggling_interfaces.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.51.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
