test imputs are inserted with the intefaces

--- a/haggling_ui.csproj
+++ b/haggling_ui.csproj
@@ -10,10 +10,12 @@
 
     <ItemGroup>
         <ProjectReference Include="..\haggling_interfaces\haggling_interfaces.csproj" />
+        <ProjectReference Include="..\Ohne Titel\haggling_interfaces\haggling_interfaces.csproj" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Spectre.Console" Version="0.51.1" />
+        <PackageReference Include="Spectre.Console.Cli" Version="0.51.1" />
     </ItemGroup>
 
 </Project>
