--- a/haggling_ui.csproj
+++ b/haggling_ui.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\haggling_interfaces\haggling_interfaces.csproj" />
+        <ProjectReference Include="..\haggling\haggling_interfaces\haggling_interfaces.csproj" />
     </ItemGroup>
 
     <ItemGroup>
